# pplx_garden_cxi

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  my_build.sh  my_build_python.sh  pyproject.toml  run_benchmark_all2all.sh  rustfmt.toml  srun_compile.sh
benchmarks/: bench_all_to_all.py
docker/: dev.Dockerfile
fabric-lib/: Cargo.toml
fabric-lib/fabric-debug/: Cargo.toml
fabric-lib/fabric-debug/src/: main.rs
fabric-lib/libfabric-sys/: .gitignore  Cargo.toml  build.rs  wrapper.h
fabric-lib/libfabric-sys/src/: lib.rs
fabric-lib/libibverbs-sys/: Cargo.toml  build.rs  wrapper.h
fabric-lib/libibverbs-sys/src/: lib.rs
fabric-lib/src/: api.rs  domain_group.rs  domain_group.rs_modified  error.rs  fabric_engine.rs  host_buffer.rs  imm_count.rs  interface.rs  lib.rs  mr.rs  provider.rs  provider_dispatch.rs  rdma_op.rs  topo.rs  transfer_engine.rs  transfer_engine_builder.rs  worker.rs
fabric-lib/src/efa/: efa_devinfo.rs  efa_domain.rs  efa_mr.rs  efa_rdma_op.rs  mod.rs
fabric-lib/src/utils/: defer.rs  hex.rs  memory.rs  mod.rs  obj_pool.rs
fabric-lib/src/verbs/: mod.rs  verbs_address.rs  verbs_devinfo.rs  verbs_domain.rs  verbs_qp.rs  verbs_rdma_op.rs
p2p-all-to-all/: Cargo.toml
p2p-all-to-all/a2a-kernels/: Cargo.toml  build.rs
p2p-all-to-all/a2a-kernels/src/: lib.rs
p2p-all-to-all/a2a-kernels/src/a2a/: a2a_combine_recv.cu  a2a_combine_send.cu  a2a_dispatch_recv.cu  a2a_dispatch_recv.cu2  a2a_dispatch_send.cu  a2a_dispatch_send.cu2  a2a_dispatch_send.cu_wrongcopy  a2a_kernels.h  tmp
p2p-all-to-all/a2a-kernels/src/core/: combine_utils.cuh  common_utils.h  device_utils.cuh  launch_utils.cuh  memory.cuh  vector.cuh
p2p-all-to-all/src/: a2a_context.rs  a2a_handles.rs  a2a_worker.rs  lib.rs
python-ext/: Cargo.toml
python-ext/src/: lib.rs  py_cumem.rs  py_device.rs  py_fabric_lib.rs  py_p2p_all_to_all.rs
python/pplx_garden/: fabric_lib.py  fabric_lib.pyi
python/pplx_garden/distributed/: __init__.py  distributed_ops.py  nccl_all_reduce.py  parallel_group.py  process_group.py  torch_group.py
python/pplx_garden/kernels/: all_to_all.py  p2p_all_to_all.py
python/pplx_garden/native/: cumem.py  cumem.pyi  p2p_all_to_all.py  p2p_all_to_all.pyi
python/pplx_garden/utils/: logging_utils.py  math.py  torch.py
rust/build-utils/: Cargo.toml
rust/build-utils/src/: lib.rs
rust/cuda-lib/: Cargo.toml
rust/cuda-lib/cuda-sys/: Cargo.toml  build.rs
rust/cuda-lib/cuda-sys/src/: lib.rs
rust/cuda-lib/cudart-sys/: Cargo.toml  build.rs  wrapper.h
rust/cuda-lib/cudart-sys/src/: lib.rs
rust/cuda-lib/gdrapi-sys/: Cargo.toml  build.rs
rust/cuda-lib/gdrapi-sys/src/: lib.rs
rust/cuda-lib/src/: cumem.rs  device.rs  driver.rs  error.rs  event.rs  gdr.rs  lib.rs  mem.rs  rt.rs  test_driver.rs  test_gdr.rs
rust/logging-lib/: Cargo.toml
rust/logging-lib/src/: lib.rs
rust/proc-lib/: Cargo.toml
rust/proc-lib/src/: lib.rs
rust/thread-lib/: Cargo.toml
rust/torch-lib/: Cargo.toml  build.rs
rust/torch-lib/src/: lib.rs  test_torch.rs  torch_lib.cc  torch_lib.h
tests/: fabric.py  markers.py
tests/fabric_lib/: log_transfer_engine  run_test_handle.sh  run_transfer_engine.sh  test_handle.py  test_transfer_engine.py  test_types.py
tests/p2p_all_to_all/: data.py  test_p2p_all_to_all.py
