[workspace]
members = [
  "fabric-lib",
  "fabric-lib/fabric-debug",
  "p2p-all-to-all",
  "python-ext",
  "rust/build-utils",
  "rust/cuda-lib",
  "rust/logging-lib",
  "rust/proc-lib",
  "rust/thread-lib",
  "rust/torch-lib",
]
resolver = "2"

[workspace.dependencies]
# Workspace crates
build-utils = { path = "rust/build-utils" }
cuda-lib = { path = "rust/cuda-lib" }
fabric-lib = { path = "fabric-lib" }
logging-lib = { path = "rust/logging-lib" }
p2p-all-to-all = { path = "p2p-all-to-all" }
proc-lib = { path = "rust/proc-lib" }
thread-lib = { path = "rust/thread-lib" }
torch-lib = { path = "rust/torch-lib" }

# Shared dependencies
anyhow = { version = "1.0.100", features = ["backtrace"] }
bincode = "2.0.1"
bindgen = "0.72.1"
bytes = { version = "1.10.1", features = ["serde"] }
cc = "1.2.44"
clap = { version = "4.5.51", features = ["derive", "env"] }
crossbeam-channel = "0.5.15"
cxx = { version = "1.0.187" }
cxx-build = { version = "1.0.187" }
dashmap = { version = "6.1.0", features = ["inline"] }
futures = "0.3.31"
hashbrown = { version = "0.16.0", default-features = false, features = ["inline-more", "serde", "default-hasher"] }
is-terminal = "0.4"
libc = "0.2"
mockall = "0.13.1"
nvtx = "1.3.0"
once_cell = "1.21.3"
oneshot = "0.1.11"
parking_lot = "0.12.5"
pkg-config = "0.3.32"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
pyo3 = { version = "0.27.1", features = ["anyhow"] }
pyo3-build-config = "0.27.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
smallvec = { version = "1.15.1", features = ["serde", "union"] }
syscalls = "0.7.0"
thiserror = "2.0.17"
tokio = "1.48.0"
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
